# brainscrews

./: README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: integration.rs
crates/lexer/src/: lexer.rs  lexer_test.rs  lib.rs  tokens.rs
crates/vm/: Cargo.toml
crates/vm/src/: instr.rs  lib.rs  vm.rs  vm_test.rs
