[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
anyhow = "1.0"
lexer = { path = "../lexer/" }
vm = { path = "../vm/" }

[dev-dependencies]
assert_cmd = "2.0"
